--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
+    <title>Startup Cloned</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,7 +20,7 @@
       <div class="container d-flex align-items-center h-100">
         <div class="row">
           <header class="text-center col-12">
-            <h1 class="text-uppercase"><strong>The Biggest Startup Event of the Year</strong></h1>
+            <h1 class="text-uppercase"><strong>Biggest Startup Event of the Year</strong></h1>
           </header>
           <div class="buffer col-12"></div>
           <section class = "text-center col-12">
