Added p-tag to file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="row">
           <header class="text-center col-12">
             <h1 class="text-uppercase"><strong>Biggest Startup Event of the Year</strong></h1>
+            <p> Sign up Today</p>
           </header>
           <div class="buffer col-12"></div>
           <section class = "text-center col-12">
